[package]
name = "ole-compound-document-parser"
version = "0.1.15"
authors = ["Thomas BAILLEUX <thomas@bailleux.me>"]
description = "Simple parser and reader for Microsoft Compound Document File."
homepage = "https://github.com/zadlg/ole"
readme = "README.md"
keywords = ["ole", "compound", "document", "file", "parser"]
categories = ["parser-implementations", "parsing"]
license = "WTFPL"
repository = "https://github.com/jhg/ole-compound-document-parser.git"

[lib]
name = "ole_compound_document_parser"

[dependencies]
